# kernel

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.beads/: issues.jsonl
boot/: Cargo.toml
boot/src/: main.rs
docs/: ipc-protocols.md  syscalls.md
docs/journal/: 2026-01-27.txt  2026-01-28.txt  (+14 more)
journal/: 2026-01-28.md
kernel/: Cargo.toml  aarch64-kenix.json  build.rs  linker.ld
scripts/: create_disk.sh
user/: Cargo.toml  aarch64-kenix-user.json  console.c  crt0.s  crt0_console.s  init.c  init.elf  init.s  ipc.h  shm.h  user.ld
user/blkdev/: Cargo.toml
user/blkdev/src/: blk.rs  main.rs  virtio_mmio.rs  virtqueue.rs
user/console/: Cargo.toml
user/console/src/: main.rs
user/doom/: Makefile  i_net_stub.c  i_sound_stub.c  i_system_kenix.c  i_video_kenix.c  m_misc_kenix.c
user/fbdev/: Cargo.toml
user/fbdev/src/: font.rs  fwcfg.rs  main.rs  ramfb.rs  virtio_gpu.rs  virtio_mmio.rs
user/forktest/: Cargo.toml
user/forktest/src/: main.rs
user/hello/: Cargo.toml
user/hello/src/: main.rs
user/init/: Cargo.toml
user/init/src/: main.rs
user/kbdev/: Cargo.toml
user/kbdev/src/: input.rs  main.rs  virtqueue.rs
user/libkenix/: Cargo.toml
user/libkenix/src/: lib.rs
user/libvirtio/: Cargo.toml
user/libvirtio/src/: lib.rs  mmio.rs  virtqueue.rs
user/netdev/: Cargo.toml
user/netdev/src/: main.rs  net.rs  virtio_mmio.rs
user/pipeserv/: Cargo.toml
user/pipeserv/src/: main.rs
user/vfs/: Cargo.toml
user/vfs/src/: blk_client.rs  main.rs
user/vfs/src/fat32/: bpb.rs  dir.rs  fat.rs  file.rs  mod.rs
(+25 files in other folders)
