[workspace]
resolver = "2"
members = [
    "libkenix",
    "libvirtio",
    "console",
    "init",
    "vfs",
    "hello",
    "blkdev",
    "netdev",
    "pipeserv",
    "forktest",
    "fbdev",
    "kbdev",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 0      # Change from "z" to "0" for debugging
lto = false
